--- a/package.json
+++ b/package.json
@@ -2,23 +2,48 @@
   "name": "@elementals/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:hydron": "nx serve hydron",
+    "start:hellfire": "nx serve hellfire",
+    "start:all": "nx run-many --target=serve --projects=hydron,hellfire --parallel",
+    "build:hydron": "nx build hydron",
+    "test:hydron": "nx test hydron",
+    "lint:hydron": "nx lint hydron",
+    "e2e:hydron": "nx e2e hydron",
+    "build:hellfire": "nx build hellfire",
+    "test:hellfire": "nx test hellfire",
+    "lint:hellfire": "nx lint hellfire",
+    "e2e:hellfire": "nx e2e hellfire"
+  },
   "private": true,
   "dependencies": {
     "@elementals/source": "file:",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nrwl/nest": "^19.7.3",
     "@nx/devkit": "19.7.3",
     "@nx/eslint": "19.7.3",
     "@nx/eslint-plugin": "19.7.3",
     "@nx/jest": "19.7.3",
     "@nx/js": "19.7.3",
+    "@nx/nest": "19.7.3",
     "@nx/next": "19.7.3",
+    "@nx/node": "19.7.3",
     "@nx/playwright": "19.7.3",
+    "@nx/web": "19.7.3",
+    "@nx/webpack": "19.7.3",
     "@nx/workspace": "19.7.3",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -43,12 +68,14 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "nx": "19.7.3",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "webpack-cli": "^5.1.4"
   }
 }
