feat: add stock dashboard

--- a/package.json
+++ b/package.json
@@ -18,16 +18,24 @@
   "private": true,
   "dependencies": {
     "@elementals/source": "file:",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/material": "^6.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "next": "14.2.3",
+    "openai": "^4.61.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
